flux/apps/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seerr
  name: seerr
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://seerr.multimedia-factory.svc:5055"
    uptime-kuma.io/name: "seerr"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Media & Streaming"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5055
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /app/config
              name: seerr-config
      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: seerr-config
