flux/apps/seerr/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: seerr
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:VQJ2OCG0DWSmVvwqi40xn+WA/2b2xdyMvir+,iv:LgGa9fzXP8qlTbgRKqnMimzu71t7tUQFINHDJ/3R5T0=,tag:cSTAThKg/t06MiAhJIUxdg==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: seerr
              port: 5055
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnMXl6M0pzcU16eS9aQWdV
[...]
            O39D3ATFByraBZeh4CddUOV0DjFuDNCVpnGXoPtXZTpV7MuSdGoUUQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-02-15T09:34:40Z"
    mac: ENC[AES256_GCM,data:Hh0/jtHXTKHB8M332g1wKPAtaZJUIznWbA6dcCANTbGtqUEnym4MneiyVrUc0/Z9M5OaRDXmtGEr0kicqT559kcjvK9GqK1dO+0z7T6105xqfc3lm5znE1bjj5RwxS5rPSDTlVF1PNfWOFRxjrG6BFI7QOrW3d4YxSNRisawh8E=,iv:4kkNyBUXDeLIut4ZOKTJU8EdsMwh6+6onXszLrrFcC0=,tag:VVZrodBHnswWC1dzcbCZPg==,type:str]
    encrypted_regex: hostnames|0
    version: 3.11.0
